--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "zod": "^3.24.1"
   },
   "scripts": {
     "start": "react-scripts start",
